welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:18: error: value Length is not a member of Array[java.awt.Color]
			var x:Int = (w+decalage) % T.Length
                                                     ^